experimental/parser/testdata/parser/syntax/eof_after_eq.proto.stderr.txt
error: unexpected end-of-file in expression
  --> testdata/parser/syntax/eof_after_eq.proto:15:9
   | 
15 | syntax = 
   |         ^ expected expression

encountered 1 error
